# Charon

./: .gitignore  CHANGELOG.md  CLAUDE.md  HOWTO.md  LICENSE  README.md  REQUIREMENTS.md  RESPONSIBLE_USE.md  ROADMAP.md  profile.yaml.example  pyproject.toml  sync.yaml.example
.claude/Commands/: hunt-report.md  phase-check.md  security-review.md  test-boundaries.md
charon/: __init__.py  ai.py  apply.py  batch.py  cli.py  contacts.py  cull.py  dashboard.py  db.py  dbsync.py  digest.py  dossier.py  fetcher.py  ghostbust.py  hunt.py  inbox.py  letter.py  monoculture.py  output.py  profile.py  redflags.py  render.py  resume_match.py  salary.py  screen.py  secrets.py  sirens.py  stock.py  tailor.py
charon/enrich/: __init__.py  ats_css.py  jsonld.py  llm.py  workday_cxs.py
charon/gather/: __init__.py  ashby.py  greenhouse.py  lever.py  successfactors.py  workday.py
charon/templates/: charon-document-style.css  cover-letter-skeleton.html  magical_questions.yaml  manifest.html  resume-skeleton.html
config/: companies.yaml
scripts/: judge_ingest.py
tests/: conftest.py  test_apply.py  test_batch.py  test_cli_provision.py  test_db.py  test_db_discoveries.py  test_digest.py  test_dossier.py  test_enrich_ats_css.py  test_enrich_cascade.py  test_enrich_jsonld.py  test_enrich_llm.py  test_fetcher.py  test_gather.py  test_gather_ashby.py  test_gather_detect.py  test_gather_lever.py  test_gather_successfactors.py  test_gather_workday.py  test_ghostbust.py  test_hunt.py  test_inbox.py  test_letter.py  test_profile.py  test_redflags.py  test_render.py  test_resume_match.py  test_screen.py  test_secrets.py  test_stock.py  test_tailor.py
tests/fixtures/: ashby_sample.json  greenhouse_job_page.html  greenhouse_sample.json  jsonld_graph.html  jsonld_no_jobposting.html  jsonld_workday.html  lever_sample.json  successfactors_page1.html  successfactors_page2.html  workday_job_page.html  workday_page1.json  workday_page2.json
