[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charon-jobs"
version = "0.9.5"
description = "Getting you to the other side. A CLI tool that evaluates job postings and researches companies against your personal values."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "yfinance>=0.2.36",
    "hvac>=2.1",
    "pypdf>=4.0",
    "python-docx>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
charon = "charon.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["charon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
