[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charon-jobs"
version = "0.10.0"
description = "Getting you to the other side. A CLI tool that evaluates job postings and researches companies against your personal values."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # Upper bounds pinned to next major. Defends against a maintainer-account
    # compromise that ships a backdoored v2/v6/etc. from being silently
    # picked up on the next `pip install -U`. Floor is "what we know works."
    "click>=8.1,<9.0",
    "rich>=13.0,<15.0",
    "anthropic>=0.40,<1.0",
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "pyyaml>=6.0,<7.0",
    "yfinance>=0.2.36,<1.0",
    "hvac>=2.1,<3.0",
    "pypdf>=4.0,<6.0",
    "python-docx>=1.0,<2.0",
    "markdown-it-py>=3.0,<4.0",
    "google-generativeai>=0.8,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<7.0",
    # Supply-chain audit. Run `pip-audit` periodically to check our
    # installed packages against the OSV / PyPI advisory database for
    # known CVEs and known-malicious-package reports.
    "pip-audit>=2.7,<3.0",
]

[project.scripts]
charon = "charon.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["charon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
